New graph architecture mostly working.  About to start on views.